--- a/css/general.css
+++ b/css/general.css
@@ -11,3 +11,55 @@ html {
 *, *:before, *:after {
 	box-sizing: inherit;
 }
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #FED245;   
+}
+
+h1 {
+  text-align: center;
+  background-image: url(../images/spider.svg), url(../images/spider.svg);
+  padding: 0 3rem;
+  background-size: .3em auto;
+  background-repeat: no-repeat;
+  background-position: 0 -500%, 100% -500%;
+  display: inline-block;
+  font-family: 'Creepster', sans-serif;
+  font-size: 4rem;
+}
+
+.header {
+  text-align: center;
+}
+
+.spider1 {
+  max-height: 7rem;
+  margin-top: -2rem; 
+  display: inline-block;
+  float: left;
+}
+
+.info {
+  text-align: center;
+  font-family: 'Creepster', sans-serif;
+  list-style-type: none;
+  padding: 0;
+  margin-top: -1.5rem;
+  font-family: 'Cutive Mono', ;
+  text-transform: uppercase;
+  font-size: .8rem;
+}
+
+.socialmedia {
+  list-style-type: none;
+  text-align: center;
+  padding: 0;
+  margin-top: -1.3rem;
+}
+
+.icon {
+  display: inline-block;
+  width: 1rem;
+}
