--- a/css/general.css
+++ b/css/general.css
@@ -46,7 +46,7 @@ h1 {
   list-style-type: none;
   padding: 0;
   margin-top: -1.5rem;
-  font-family: 'Cutive Mono', ;
+  font-family: 'Cutive Mono', sans-serif;
   text-transform: lowercase;
   font-size: .8rem;
 }
@@ -79,5 +79,5 @@ h1 {
   margin: auto;
   position: relative;
   width: 90%;
-  padding: 1rem;
+  border: black solid 2px;
 }
