--- a/css/general.css
+++ b/css/general.css
@@ -45,7 +45,7 @@ h1 {
   text-align: center;
   list-style-type: none;
   padding: 0;
-  margin-top: -1.5rem;
+  margin-top: -1rem;
   font-family: 'Cutive Mono', sans-serif;
   text-transform: lowercase;
   font-size: .8rem;
@@ -66,6 +66,31 @@ h1 {
 .icon {
   display: inline-block;
   width: 1rem;
+}
+
+.nav {
+  margin: 1rem 3rem;
+  padding: 0;
+  list-style-type: none;
+  display: block;
+  margin: 0, auto;
+}
+
+.nav li {
+}
+
+.nav a {
+  display: block;
+  padding: .3em .8em;
+  background-color: #000;
+  text-align: center;
+  border-bottom: 1px solid #FED245;
+  text-decoration: none;
+  font-family: 'Cutive Mono', sans-serif;
+  text-transform: uppercase;
+  font-size: .85rem;
+  color: #FED245;
+  
 }
 
 #galleryphotos {
