--- a/css/general.css
+++ b/css/general.css
@@ -98,7 +98,7 @@ h1 {
 }
 
 .nav {
-  margin: 0 3rem 1rem 3rem;
+  margin: 0 3rem 0 3rem;
   padding: 0;
   list-style-type: none;
   display: none;
@@ -132,7 +132,7 @@ h1 {
 
 .nav-label {
   cursor: pointer;
-  width: 40px;
+  width: 30px;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
