--- a/css/general.css
+++ b/css/general.css
@@ -248,8 +248,54 @@ h3 {
 }
 
 @media only screen and (min-width: 38em) {
+  
+  .header {
+  text-align: center;
+  }
+  
+  .nav-label {
+    cursor: pointer;
+    width: 30px;
+    z-index: 1;
+    display: inline-block;
+  }
+  
+  .socialmedia {
+    list-style-type: none;
+    text-align: center;
+    padding: 0;
+    margin-top: -1.3rem;
+    margin-bottom: 0;
+  }
+}
 
 }
 
 @media only screen and (min-width: 60em) {
+  
+  .header {
+  text-align: left;
+  }
+  
+  .nav-label {
+    cursor: pointer;
+    width: 30px;
+    z-index: 1;
+    display: inline-block;
+  }
+  
+  .socialmedia {
+    list-style-type: none;
+    text-align: left;
+    padding: 0;
+    top: 5rem;
+  }
+  
+  .icon {
+    display: inline-block;
+    width: 1.5rem;
+    height: 1.5rem;
+    padding-bottom: 0; 
+    top: 2rem;
+  }
 }
