--- a/css/general.css
+++ b/css/general.css
@@ -24,6 +24,21 @@ body {
   margin: 0 auto;
 }
 
+.skip-links {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.skip-links a {
+  position: absolute;
+  top: -3em;
+}
+
+.skip-links a:focus {
+  top: 0;
+}
+
 h1 {
   text-align: center;
   background-image: url(../images/spider.svg), url(../images/spider.svg);
