--- a/css/general.css
+++ b/css/general.css
@@ -33,6 +33,13 @@ body {
 .skip-links a {
   position: absolute;
   top: -3em;
+  background-color: #000;
+  color: #fff;
+  font-family: 'Cutive Mono' sans-serif;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 0.5em 0.75em;
+  font-weight: bold;
 }
 
 .skip-links a:focus {
@@ -261,7 +268,7 @@ h3 {
   background-color: #000;
   color: #FED245;
   padding: 2rem 1rem;
-  font-size: 1rem;
+  font-size: 0.75rem;
   text-transform: uppercase;
   font-family: 'Cutive Mono', sans-serif;
   text-align: center;
@@ -269,6 +276,12 @@ h3 {
 
 .footer p {
   margin: 0;
+}
+
+.footera {
+  text-decoration: none;
+  color: #FED245;
+  font-size: 1.5rem;
 }
 
 @media only screen and (min-width: 25em) {
