--- a/css/general.css
+++ b/css/general.css
@@ -177,6 +177,11 @@ h1 {
   color: #FED245;
 }
 
+.nav a:hover {
+  color: black;
+  background-color: #F38332;
+}
+
 .nav-check {
   position: absolute;
   top: -3em;
@@ -417,7 +422,8 @@ h3 {
     list-style-type: none;
     display: inline-block;
     position: relative;
-    left: -4.8rem;
+    left: -8rem;
+    top: 1.7rem;
   }
 
   .nav-check:checked ~ .nav-label .nav-open {
