Adding more content to my portfolio pages.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,8 @@
     {{content}}
     
     <footer class="footer" id="footer" role="complementaryinfo">
-      <p>© Jess Paget 2015 <a href="#top" class="footera">(^)</a></p>
+      <a href="#top" class="footera">↻</a>
+      <p>© Jess Paget 2015</p>
       <div class="socialmediafooter">
         <a href="https://instagram.com/radical.juice" title="instagram icon" class="icon instagramfooter"></a>
         <a href="https://www.behance.net/jessoleigh" title="behance icon" class="icon behancefooter"></a>
