--- a/css/general.css
+++ b/css/general.css
@@ -343,7 +343,7 @@ h3 {
   position: relative;
   right: -3em;
   transition: all .1s ease;
-  background-color: white;
+  background-color: #EAEAEA;
   opacity: 1;
 }
 
@@ -364,8 +364,17 @@ h3 {
   margin-top: 2em;
 }
 
+.portfolio-title {
+  margin-top: 0;
+  font-size: 2rem;
+}
+
+.portimages {
+  margin-bottom: 0;
+}
+
 .text {
-  background-color: white;
+  background-color: #EAEAEA;
   position: relative;
   overflow-y: auto;
   right: -100%;
@@ -376,11 +385,11 @@ h3 {
 }
 
 .text h3 {
-  margin-bottom: 0;
+  margin-bottom: -1em;
 }
 
 .text img {
-  margin-bottom: 5em;
+  margin-bottom: 1em;
   width: 90%;
 }
 
