Changing small details on pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         </div>
        
         <ul class="info">
-          <li>Ottawa based graphic designer</li>
+          <li class="para">Ottawa based graphic designer</li>
           <li>613 314 9753 | hey@jesspaget.ca</li>
         </ul>
       </div>
