--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,8 +41,8 @@
             <img class="nav-close" src="images/hamburger-close.svg" alt="Close Navigation">
           </label>
           <ul class="nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="info.html">Info</a></li>
+            <li><a href="index.html">{ Home }</a></li>
+            <li><a href="info.html">{ Info }</a></li>
           </ul>
         </nav>
       </div>
