--- a/css/general.css
+++ b/css/general.css
@@ -539,7 +539,7 @@ h3 {
     display: inline-block;
     position: relative;
     left: -8rem;
-    top: 5.7rem;
+    top: 3rem;
   }
 
   .nav-check:checked ~ .nav-label .nav-open {
@@ -554,6 +554,7 @@ h3 {
     display: block;
     background-color: white;
     padding: .3em .8em;
+    margin-right: 1.5em;
     text-align: left;
     border-bottom: 1px solid #FFF;
     float: left;
