--- a/css/general.css
+++ b/css/general.css
@@ -328,32 +328,27 @@ h3 {
 
 /* ************ PORTFOLIO SLIDE OUT PAGES ************ */
 
-.portfolio-piece-1 {
-  height: 100vh;
-}
-
 .portfolio-slide-open {
   position: fixed;
-  top: -100vh;
-  left: 0;
+  top: 0;
+  left: 100%;
   bottom: 0;
-  right: 0;
   height: 100vh;
+  width: 100%;
+  transition: all .1s ease;
+  overflow-y: auto;
 }
 
 .portfolio-slide-open:target {
-  top: 2em;
+  left: 0;
 }
 
 .exit {
   text-decoration: none;
-  width: 100vw;
   height: 2.3em;
-  position: relative;
-  right: -3em;
-  transition: all .1s ease;
-  background-color: #EAEAEA;
-  opacity: 1;
+  position: absolute;
+  top: 1.7em;
+  margin-bottom: 2em;
 }
 
 .exit p {
@@ -371,6 +366,7 @@ h3 {
   font-family: 'Cutive Mono', sans-serif;
   font-size: 1em;
   margin-top: 2em;
+  text-align: center;
 }
 
 .portfoliosubheads {
@@ -384,7 +380,14 @@ h3 {
 
 .portfolio-title {
   margin-top: 0;
+  margin-bottom: 2em;
+  padding-bottom: 1rem;
   font-size: 2rem;
+  text-align: center;
+}
+
+.portfolio-title-div {
+  margin-bottom: 6em;
 }
 
 .portimages {
@@ -392,13 +395,9 @@ h3 {
 }
 
 .text {
-  background-color: #EAEAEA;
-  position: relative;
+  background-color: white;
   overflow-y: auto;
-  right: -100%;
-  transition: all .1s ease;
   padding: 2em 2em 0;
-  height: 100%;
   text-align: center;
 }
 
@@ -409,14 +408,6 @@ h3 {
 .text img {
   margin-bottom: 1em;
   width: 90%;
-}
-
-.portfolio-slide-open:target .text {
-  right: 0;
-}
-
-.portfolio-slide-open:target .exit {
-  right: 0;
 }
 
 .footer {
@@ -539,7 +530,7 @@ h3 {
     display: inline-block;
     position: relative;
     left: -8rem;
-    top: 3rem;
+    top: 5.7rem;
   }
 
   .nav-check:checked ~ .nav-label .nav-open {
