--- a/css/general.css
+++ b/css/general.css
@@ -86,7 +86,6 @@ h1 {
 
 .email {
   text-transform: lowercase;
-  
 }
 
 footer p {
@@ -438,13 +437,17 @@ h3 {
   
   .header {
     text-align: center;
-    }
+  }
   
   .nav-label {
     cursor: pointer;
     width: 30px;
     z-index: 1;
     display: inline-block;
+  }
+  
+  .infoinfo {
+    max-width: 30rem;
   }
   
   .socialmedia {
@@ -475,8 +478,20 @@ h3 {
     text-align: center;
   }
   
+  .info-photo-text {
+    margin-left: 3rem;
+  }
+  
   .header {
     text-align: left;
+  }
+  
+  .myface {
+    margin-top: 3.4rem;
+  }
+  
+  h3 {
+    margin-bottom: 2rem;
   }
   
   .nav-label {
