--- a/css/general.css
+++ b/css/general.css
@@ -319,10 +319,11 @@ h3 {
   display: block;
 }
 
-.item img:hover 
-.item img:focus
-.item img:active {
+.item a img:hover 
+.item a img:focus
+.item a img:active {
   cursor: pointer;
+  opacity: 50%;
 }
 
 /* ************ PORTFOLIO SLIDE OUT PAGES ************ */
@@ -494,6 +495,10 @@ h3 {
     margin-bottom: 2rem;
   }
   
+  .exit {
+    left: 2em;
+  }
+  
   .nav-label {
     cursor: pointer;
     width: 30px;
@@ -580,6 +585,10 @@ h3 {
     text-align: left;
     margin-left: 0;
     margin-top: 3rem;
+  }
+  
+  .exit {
+    left: 4em;
   }
   
   .info {
