--- a/css/general.css
+++ b/css/general.css
@@ -398,6 +398,11 @@ h3 {
   overflow-y: auto;
   padding: 2em 2em 0;
   text-align: center;
+  width: 100%;
+}
+
+.portfoliocontent {
+  margin-top: 2em;
 }
 
 .text h3 {
