--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
       <title>Jess Paget</title>
-      <link href='https://fonts.googleapis.com/css?family=Cutive+Mono|Creepster' rel='stylesheet' type='text/css'>
+      <link href='https://fonts.googleapis.com/css?family=Cutive+Mono|Audiowide' rel='stylesheet' type='text/css'>
       <link href="css/grid.css" rel="stylesheet">
       <link href="css/typography.css" rel="stylesheet">
       <link href="css/general.css" rel="stylesheet">
@@ -24,7 +24,7 @@
     <div class="grid">  
       <div class="header unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-3" id="top" role="banner">
         <div class="headername">
-          <h1>Jess Paget</h1>
+          <h1 class="jesspaget">Jess Paget</h1>
         </div>
        
         <ul class="info">
