Fixed spacing on info page. Adding spot colour yellow to more type. Fixed the fonts to Questrial.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
       <title>Jess Paget</title>
-      <link href='https://fonts.googleapis.com/css?family=Cutive+Mono|Audiowide' rel='stylesheet' type='text/css'>
+      <link href='https://fonts.googleapis.com/css?family=Cutive+Mono|Questrial' rel='stylesheet' type='text/css'>
       <link href="css/grid.css" rel="stylesheet">
       <link href="css/typography.css" rel="stylesheet">
       <link href="css/general.css" rel="stylesheet">
@@ -41,8 +41,8 @@
             <img class="nav-close" src="images/hamburger-close.svg" alt="Close Navigation">
           </label>
           <ul class="nav">
-            <li><a href="index.html">{ Work }</a></li>
-            <li><a href="info.html">{ Info }</a></li>
+            <li><a href="index.html">[ Work ]</a></li>
+            <li><a href="info.html">[ Info ]</a></li>
           </ul>
         </nav>
       </div>
