--- a/css/general.css
+++ b/css/general.css
@@ -419,7 +419,7 @@ h3 {
   font-family: 'Cutive Mono', sans-serif;
   font-size: .8em;
   margin-top: 2em;
-  text-align: left;
+  text-align: center;
   margin-left: .9em;
   text-transform: lowercase;
 }
@@ -504,6 +504,10 @@ h3 {
     max-width: 35rem;
     margin: 0 auto;
     padding: 1em;
+  }
+  
+  .item a p {
+    font-size: 1em;
   }
   
   .socialmedia {
@@ -623,6 +627,10 @@ h3 {
     text-transform: lowercase;
     font-size: .85rem;
     color: #FED245;
+  }
+  
+  .item a p {
+    font-size: 1.7em;
   }
   
   .nav a:hover {
