--- a/css/general.css
+++ b/css/general.css
@@ -48,11 +48,8 @@ body {
 
 h1 {
   text-align: center;
-  xbackground-image: url(../images/spider.svg), url(../images/spider.svg);
   padding: 0 2rem;
   background-size: .3em auto;
-  background-repeat: no-repeat;
-  background-position: 0 100%, 100% 100%;
   display: inline-block;
   font-family: 'Questrial' sans-serif;
   text-transform: lowercase;
@@ -264,12 +261,12 @@ footer p {
 }
 
 .myface {
-    width: 20rem;
-    margin-top: 1rem;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border: solid 4px black;
+  width: 20rem;
+  margin-top: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  border: solid 4px black;
+  position: relative;
 }
 
 h3 {
