--- a/css/general.css
+++ b/css/general.css
@@ -367,18 +367,12 @@ h3 {
   text-transform: uppercase;
   font-family: 'Cutive Mono', sans-serif;
   
-  -webkit-transform: scale(0);
-  -o-transform: scale(0);
-  -moz-transform: scale(0);
-  transform: scale(0);
+  display: none;
 }
 
 .hover-box:hover p {
   
-  -webkit-transform: scale(1);
-  -o-transform: scale(1);
-  -moz-transform: scale(1);
-  transform: scale(1);
+  display: block;
 }
 
 /* ************ PORTFOLIO SLIDE OUT PAGES ************ */
