Adding new content to portfolio pieces and fixing spacing.

--- a/css/general.css
+++ b/css/general.css
@@ -663,4 +663,9 @@ h3 {
   .main {
     margin-bottom: 4rem;
   }   
+  
+  .portfolio-content {
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
 }
