--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
       <li><a href="#nav">Jump to navigation</a></li>
       <li><a href="#main">Jump to the main content</a></li>
       <li><a href="#footer">Jump to the footer</a></li>
-    </ul>
+   </ul>
     
     <!-- ************ HEADER ************ -->
     
@@ -43,6 +43,7 @@
           <ul class="nav">
             <li><a href="index.html">[ Work ]</a></li>
             <li><a href="info.html">[ Info ]</a></li>
+            <li><a href="http://www.redbubble.com/people/juicepaget">[ buy ]</a></li>
           </ul>
         </nav>
       </div>
