--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
       <link href="css/grid.css" rel="stylesheet">
       <link href="css/typography.css" rel="stylesheet">
       <link href="css/general.css" rel="stylesheet">
-      <link href="images/logofavicon.svg" rel="shortcut icon">
+      <link href="favicon.ico" rel="shortcut icon">
       <meta name="viewport" content="width=device-width,initial-scale=1">   
   </head>
   
@@ -61,6 +61,11 @@
         <a href="https://ca.linkedin.com/pub/jess-paget/b5/561/424" title="linkedin icon" class="icon linkedinfooter"></a>
       </div>
     </footer>
-    
+   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.0/jquery.scrollTo.min.js"></script></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-localScroll/1.4.0/jquery.localScroll.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.min.js"></script>
+    <script src="js/general.js"></script>  
   </body>
   </html>
