--- a/css/general.css
+++ b/css/general.css
@@ -13,9 +13,9 @@ html {
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    background-color: #FFF;   
+  margin: 0;
+  padding: 0;
+  background-color: #FFF;
 }
 
 .img-flex {
@@ -482,6 +482,24 @@ h3 {
   text-decoration: none;
   color: #FED245;
   font-size: 1.5rem;
+}
+
+.error {
+  text-align: center;
+}
+
+.errorpageh1 {
+  text-align: center;
+  font-family: 'Cutive Mono', sans-serif;
+  font-size: 2rem;
+  margin-bottom: -1rem;
+  color: #FED245;
+}
+
+.errorpagep {
+  text-align: center;
+  font-family: 'Questrial', sans-serif;
+  font-size: 1rem;
 }
 
 @media only screen and (min-width: 25em) {
